Add store and routing

--- a/web/index.html
+++ b/web/index.html
@@ -6,8 +6,10 @@
 
 <body>
     <div id="app">
-        <add-brew></add-brew>
-        <brews :brews="recipes"></brews>
+        <!-- <add-brew></add-brew> -->
+        <!-- <brews :brews="recipes"></brews> -->
+        <!-- <recipe-details :recipe="recipe"></recipe-details> -->
+        <router-view></router-view>
     </div>
     <script src="/out/bundle.js"></script>
 </body>
