--- a/web/index.html
+++ b/web/index.html
@@ -9,6 +9,7 @@
         <!-- <add-brew></add-brew> -->
         <!-- <brews :brews="recipes"></brews> -->
         <!-- <recipe-details :recipe="recipe"></recipe-details> -->
+        <top-menu></top-menu>
         <router-view></router-view>
     </div>
     <script src="/out/bundle.js"></script>
