Style add recipe page and add input fields

--- a/web/index.html
+++ b/web/index.html
@@ -10,7 +10,9 @@
         <!-- <brews :brews="recipes"></brews> -->
         <!-- <recipe-details :recipe="recipe"></recipe-details> -->
         <top-menu></top-menu>
-        <router-view></router-view>
+        <div id="main-wrapper">
+            <router-view></router-view>
+        </div>
     </div>
     <script src="/out/bundle.js"></script>
 </body>
