--- a/web/prod.html
+++ b/web/prod.html
@@ -2,7 +2,7 @@
 
 <head>
     <title>Brews</title>
-    <link href="out/style.css" rel="stylesheet" />
+    <link href="style.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -10,7 +10,7 @@
         <add-brew></add-brew>
         <brews :brews="recipes"></brews>
     </div>
-    <script src="out/bundle.js"></script>
+    <script src="bundle.js"></script>
 </body>
 
 </html>
