--- a/web/prod.html
+++ b/web/prod.html
@@ -1,6 +1,8 @@
+<!DOCTYPE html>
 <html>
 
 <head>
+    <meta charset="UTF-8">
     <title>Brews</title>
     <link href="style.css" rel="stylesheet" />
 </head>
