Update prod html

--- a/web/prod.html
+++ b/web/prod.html
@@ -2,19 +2,20 @@
 <html>
 
 <head>
-    <meta charset="UTF-8">
-    <title>Brews</title>
-    <link href="style.css" rel="stylesheet" />
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Brews</title>
+   <link href="style.css" rel="stylesheet" />
 </head>
 
 <body>
-    <div id="app">
-        <top-menu></top-menu>
-        <div id="main-wrapper">
-            <router-view></router-view>
-        </div>
-    </div>
-    <script src="bundle.js"></script>
+   <div id="app">
+      <top-menu></top-menu>
+      <div id="main-wrapper">
+         <router-view></router-view>
+      </div>
+   </div>
+   <script src="bundle.js"></script>
 </body>
 
 </html>
