--- a/web/index.html
+++ b/web/index.html
@@ -13,6 +13,7 @@
         <div id="main-wrapper">
             <router-view></router-view>
         </div>
+        <dialogs id="dialogs"></dialogs>
     </div>
     <script src="/out/bundle.js"></script>
 </body>
