--- a/web/prod.html
+++ b/web/prod.html
@@ -14,6 +14,7 @@
       <div id="main-wrapper">
          <router-view></router-view>
       </div>
+      <dialogs id="dialogs"></dialogs>
    </div>
    <script src="bundle.js"></script>
 </body>
